--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   firebase_analytics: ^10.5.1
   file_picker: ^6.1.1
   firebase_storage: ^11.5.0
+  audioplayers: ^5.2.1
+  record: ^5.0.1
+  path_provider: ^2.1.1
 
 dev_dependencies:
   flutter_test:
